--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - Simulated Jenkins
+name: CI - Build and Test
 
 on:
   push:
@@ -20,11 +20,11 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Grant execute permission to Gradle
+      - name: Grant Gradle execute permissions
         run: chmod +x ./gradlew
 
       - name: Build
         run: ./gradlew assemble
 
-      - name: Test
+      - name: Run Tests
         run: ./gradlew test
